// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a credential offer screen renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#000000",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "mime-type": "text/plain",
          "name": "name",
          "value": "Alice Smith",
        },
        Object {
          "mime-type": "text/plain",
          "name": "date",
          "value": "2018-05-28",
        },
        Object {
          "mime-type": "text/plain",
          "name": "degree",
          "value": "Maths",
        },
        Object {
          "mime-type": "text/plain",
          "name": "birthdate_dateint",
          "value": "19980222",
        },
        Object {
          "mime-type": "text/plain",
          "name": "timestamp",
          "value": "1645559742",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Array [
              Object {
                "marginBottom": 20,
                "marginHorizontal": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginVertical": 20,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 26,
                    "fontWeight": "bold",
                  },
                  Object {
                    "textAlign": "center",
                  },
                ]
              }
            >
              faber.agent
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "textAlign": "center",
                  },
                ]
              }
            >
              is offering you a credential
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 10,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderColor": "#FFFFFF",
                    "borderRadius": 32,
                    "borderWidth": 3,
                    "height": 64,
                    "justifyContent": "center",
                    "margin": 12,
                    "width": 64,
                  },
                  Object {
                    "borderColor": "#88DA8B",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 32,
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                f
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                Credential
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "marginTop": 10,
                    },
                  ]
                }
              >
                Issued: Feb 22, 2022
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              Object {
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Name
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              Alice Smith
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Date
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              2018-05-28
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Degree
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              Maths
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Birthdate Dateint
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              19980222
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Timestamp
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              1645559742
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingTop": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 20,
                  "marginHorizontal": 25,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "paddingBottom": 10,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={false}
                collapsable={false}
                focusable={true}
                nativeID="animatedComponent"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#35823F",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                    ]
                  }
                >
                  Global.Accept
                </Text>
              </View>
            </View>
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "borderColor": "#35823F",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "opacity": 1,
                  "padding": 16,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#35823F",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                Global.Decline
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialOnTheWay"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialOnTheWay
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Cancel
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialAddedToYourWallet"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialAddedToYourWallet
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialDeclined"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialDeclined
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</View>
`;

exports[`displays a credential offer screen shows declined conformation alert 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#000000",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "mime-type": "text/plain",
          "name": "name",
          "value": "Alice Smith",
        },
        Object {
          "mime-type": "text/plain",
          "name": "date",
          "value": "2018-05-28",
        },
        Object {
          "mime-type": "text/plain",
          "name": "degree",
          "value": "Maths",
        },
        Object {
          "mime-type": "text/plain",
          "name": "birthdate_dateint",
          "value": "19980222",
        },
        Object {
          "mime-type": "text/plain",
          "name": "timestamp",
          "value": "1645559742",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Array [
              Object {
                "marginBottom": 20,
                "marginHorizontal": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginVertical": 20,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 26,
                    "fontWeight": "bold",
                  },
                  Object {
                    "textAlign": "center",
                  },
                ]
              }
            >
              faber.agent
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "textAlign": "center",
                  },
                ]
              }
            >
              is offering you a credential
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 10,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderColor": "#FFFFFF",
                    "borderRadius": 32,
                    "borderWidth": 3,
                    "height": 64,
                    "justifyContent": "center",
                    "margin": 12,
                    "width": 64,
                  },
                  Object {
                    "borderColor": "#88DA8B",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 32,
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                f
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                Credential
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "marginTop": 10,
                    },
                  ]
                }
              >
                Issued: Feb 22, 2022
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              Object {
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Name
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              Alice Smith
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Date
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              2018-05-28
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Degree
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              Maths
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Birthdate Dateint
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              19980222
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingHorizontal": 25,
                "paddingTop": 16,
              },
              null,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": 90,
                  "justifyContent": "space-between",
                  "minHeight": 18,
                  "paddingVertical": 15,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Timestamp
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              1645559742
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#d3d3d3",
                  "borderBottomWidth": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#313132",
                "paddingTop": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 20,
                  "marginHorizontal": 25,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "paddingBottom": 10,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={false}
                collapsable={false}
                focusable={true}
                nativeID="animatedComponent"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(53, 130, 63, 0.35)",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Global.Accept
                </Text>
              </View>
            </View>
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "borderColor": "rgba(53, 130, 63, 0.7)",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "opacity": 1,
                  "padding": 16,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#35823F",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(53, 130, 63, 0.7)",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Global.Decline
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialOnTheWay"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialOnTheWay
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Cancel
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialAddedToYourWallet"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialAddedToYourWallet
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialDeclined"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialDeclined
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</View>
`;
